Code examples for the first chapter