@@ -10,7 +10,7 @@ public class PrimitiveTypes {
         minMax();
         casting();
         literals();
-        newInJava12();
+        newNumberFormat();
     }
 
     private static void charType(){
@@ -54,7 +54,6 @@ public class PrimitiveTypes {
         System.out.println(Float.MAX_VALUE);  // 3.4028235E38
         System.out.println(Double.MIN_VALUE); // 4.9E-324
         System.out.println(Double.MAX_VALUE); // 1.7976931348623157E308
-
     }
 
     private static void casting(){
@@ -103,7 +102,7 @@ public class PrimitiveTypes {
         System.out.println('\'');   //prints: '
         System.out.println('\\');   //prints: \
 
-        System.out.println("The back\bspace");     //The bacspace
+        System.out.println("The back\bspace");     //The backspace
         System.out.println("The horizontal\ttab"); //The horizontal	tab
         System.out.println("The line\nfeed");      //The line
                                                    //feed
@@ -115,7 +114,7 @@ public class PrimitiveTypes {
         var x = 1;
     }
 
-    private static void newInJava12(){
+    private static void newNumberFormat(){
         System.out.println("\nNew compact number format:");
         NumberFormat fmt = NumberFormat.getCompactNumberInstance(Locale.US, NumberFormat.Style.SHORT);
         System.out.println(fmt.format(42_000));      //prints: 42K
@@ -123,45 +122,6 @@ public class PrimitiveTypes {
 
         NumberFormat fmtP = NumberFormat.getPercentInstance();
         System.out.println(fmtP.format(0.42));       //prints: 42%
-
-        //The following is a preview feature
-        // and requires adding option
-        // --enable-preview
-        // to javac and java commands
-/*
-        System.out.println("\nSwitch statement with lambda-like format:");
-        switchDemo1(1);    //prints: 1 or 3: 1
-        switchDemo1(2);    //prints: Not 1,3,4,5,6: 2
-        switchDemo1(5);    //prints: 5 or 6: 5
-
-        System.out.println("\nSwitch statement that returns value:");
-        switchDemo2(0);    //prints: false
-        switchDemo2(1);    //prints: true
-        switchDemo2(2);    //prints: false
-*/
-
     }
-
-/*
-    private static void switchDemo1(int i){
-        switch (i) {
-            case 1, 3 -> System.out.print("1 or 3");
-            case 4    -> System.out.print("4");
-            case 5, 6 -> System.out.print("5 or 6");
-            default   -> System.out.print("Not 1,3,4,5,6");
-        }
-        System.out.println(": " + i);
-    }
-
-    private static void switchDemo2(int i){
-        boolean b = switch(i) {
-            case 0 -> false;
-            case 1 -> true;
-            default -> false;
-        };
-        System.out.println(b);
-    }
-*/
-
 }
 
